trunk (2008-05-02)
==================

  - xxx [Ingeniweb]

0.1.1 (2008-05-02)
==================

  - bugs fixes [gawel]

0.1.0 (xxxx-xx-xx)
==================

 - Created recipe with ZopeSkel [Gael Pasgrimaud].